# workshop-bedrock-chapter

./: .gitignore  README.md  poc_template.yaml  pyproject.toml
documents/: readme.txt
notebooks/: 01-test-bedrock-api.ipynb
scripts/: commands_s3.sh  commands_template.sh
src/app_connect/: app_connect.py
src/app_disconnect/: app_disconnect.py
src/app_inference/: app_inference.py  config_fm.py  config_kb.py  gen_ai_service.py
test_app/: test_streaming_app.html
